k8s/result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: voting-app
  labels:
    app: result
spec:
  replicas: 2

  selector:
    matchLabels:
      app: result

  template:
    metadata:
      labels:
        app: result

    spec:
      containers:
        - name: result
          image: ramitop/result:v1
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 80
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: voting-app
  labels:
    app: result
spec:
  type: ClusterIP

  selector:
    app: result

  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
