k8s/vote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: voting-app
  labels:
    app: vote
spec:
  replicas: 2

  selector:
    matchLabels:
      app: vote

  template:
    metadata:
      labels:
        app: vote

    spec:
      containers:
        - name: vote
          image: ramitop/vote:v1
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 80
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  namespace: voting-app
  labels:
    app: vote
spec:
  type: LoadBalancer

  selector:
    app: vote

  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
